# tg_avito_bot

./: .gitignore  README.md  alembic.ini  config.example.yml  pyproject.toml
bot/: __main__.py
bot/config_data/: __init__.py  config.py
bot/database/: __init__.py  base.py  requests.py
bot/database/migrations/: env.py
bot/database/migrations/versions/: 20240921_1502_add_table_profile.py  20240921_1752_add_table_account_slot.py  20240922_1136_change_logic_subscription_in_table_.py  20240923_1642_add_table_account.py  20240923_2215_delete_uuid_column_and_change_name_.py  20240927_1722_add_column_account_uuid_in_table_account.py  20240929_1729_create_tables_profile_account_slot_.py  20241024_1646_add_table_profile.py  20241024_2114_add_table_account_slot.py  20241024_2123_add_table_account.py
bot/database/models/: __init__.py  account.py  account_slot.py  profile.py
bot/dialogs/: __init__.py
bot/dialogs/information/: dialogs.py  getters.py
bot/dialogs/menu/: dialogs.py  getters.py  handlers.py
bot/dialogs/start/: dialogs.py  getters.py
bot/handlers/: __init__.py  commands.py  others.py
bot/locales/: stub.pyi
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/middlewares/: __init__.py  delete_message.py  i18n.py  session.py  track_all_users.py
bot/states/: __init__.py  information.py  menu.py
bot/storage/: __init__.py  nats_storage.py
bot/utils/: __init__.py  i18n.py  nats_connect.py
scripts/: update_stub.sh
