[tool.poetry]
name = "tg-avito-bot"
version = "0.1.0"
description = ""
authors = ["Ilmir Nigmatullin <nigmatullin.mir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
