[tool.poetry]
name = "tg-avito-bot"
version = "0.1.0"
description = ""
authors = ["Ilmir Nigmatullin <nigmatullin.mir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
pyyaml = "^6.0.2"
aiogram-dialog = "^2.2.0"
fluentogram = "^1.1.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
psycopg = {extras = ["binary"], version = "^3.2.2"}
alembic = "^1.13.2"
nats-py = "^2.9.0"
ormsgpack = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
